# MarkdownEditView

./: .gitignore  .gitmodules  CMakeLists.txt  MarkdownEditView.json.in  README.md  htmlview.cpp  htmlview.h  htmlviewwidgetfactory.cpp  htmlviewwidgetfactory.h  ihtmlview.h  imarkdowneditview.h  markdowneditviewplugininternal.h  markdowntexteditorfactory.cpp  markdowntexteditorfactory.h  markdowntexteditorwidget.cpp  markdowntexteditorwidget.h  textchangedevent.h
.github/workflows/: build_cmake.yml
di/: dependencyprovider.h  dependencyprovider_impl.cpp  dependencyprovider_impl.h  idiclient.cpp  idiclient.h
eb/: eventbus.h  eventbus_impl.cpp  eventbus_impl.h  eventlistener.h
resources/: dark_scroll_bar.css  default.md  index.html  index_dark.html  index_light.html  index_template copy.html  index_template.html  resource.qrc  version.ini
src/: MarkdownEditAndView_en_US.ts  firstlinenumberineditorchangedevent.h  firstlinenumberinpreviewchangedevent.h  htmlgenerator.cpp  htmlgenerator.h.in  htmlview.cpp  htmlview.h  htmlviewwidgetfactory.cpp  htmlviewwidgetfactory.h  ihtmlview.h  imarkdowneditview.h  markdowneditview.cpp  markdowneditview.h  markdowneditview_global.h  markdowneditviewconstants.h  markdowneditviewplugininternal.cpp  markdowneditviewplugininternal.h  markdownhighlighter.cpp  markdownhighlighter.h  markdowntexteditorfactory.cpp  markdowntexteditorfactory.h  markdowntexteditorwidget.cpp  markdowntexteditorwidget.h  previewpage.cpp  previewpage.h  textchangedevent.h
src/syntaxhighlighter/: languagehighlighterbase.cpp  languagehighlighterbase.h  markdownhighlighter.cpp  markdownhighlighter.h  qownlanguagedata.cpp
